syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces";
option java_outer_classname = "HelloWorldProto";

service TestHelloService {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
